chore: fixes smooth scrollbar syntax

--- a/src/css/hub/intro.css
+++ b/src/css/hub/intro.css
@@ -108,3 +108,13 @@
 		margin-left: -8%;
 	}
 }
+
+#content {
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+}
+
+html, body {
+  height: 100%; /* assuming you want a full-page scroller */
+}
